force-app/main/default/objects/Desk_Article_Migration__c/Desk_Article_Migration__c.object-meta.xml
<CustomObject>
    <label>Desk Article Migration</label>
    <nameField>
        <displayFormat>DArM-{0000000}</displayFormat>
        <label>Desk Article Migration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desk Article Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>