force-app/main/default/objects/Desk_Article_Migration__c/fields/DESKSCMT_Body__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>