force-app/main/default/objects/Desk_Article_Migration__c/fields/DESKSCMT_Desk_iFrame_Code__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Desk_iFrame_Code__c</fullName>
    <label>Desk iFrame Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>