force-app/main/default/objects/Desk_Article_Migration__c/fields/DESKSCMT_Desk_Topic__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Desk_Topic__c</fullName>
    <label>Desk Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>