force-app/main/default/objects/Desk_Article_Migration__c/fields/DESKSCMT_IsVisibleInPkb__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_IsVisibleInPkb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Support Center</label>
    <type>Checkbox</type>
</CustomField>