force-app/main/default/objects/Desk_Article_Migration__c/fields/DESKSCMT_Summary__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Summary__c</fullName>
    <label>Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>