force-app/main/default/objects/Desk_Article_Migration__c/fields/DESKSCMT_Title__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>