force-app/main/default/objects/Desk_Article_Migration__c/fields/DESKSCMT_URL__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_URL__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>