force-app/main/default/objects/Desk_Article_Migration__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>