force-app/main/default/objects/Desk_Article_Migration__c/fields/Public_Url__c.field-meta.xml
<CustomField>
    <fullName>Public_Url__c</fullName>
    <label>Public Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>