force-app/main/default/objects/Desk_Article_Migration__c/fields/Salesforce_Intermediate_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Intermediate_Article_Id__c</fullName>
    <label>Salesforce Intermediate Article Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>